wp-content/themes/assist-trust/style.css
/*
 * Theme Name: Assist Trust
 * Author: Matt Layton
 * Description: Assist Trust theme
 * Version: 0.0.1
 */

@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');

:root {
  overflow-x: hidden;
}

body {
  display: flex;
  flex-direction: column;
  color: #004279;
  font-family: 'Roboto', sans-serif;
  min-width: 320px;
}

*:focus {
  outline: 1px dashed currentColor;
  outline-offset: 5px;
  transition: outline-offset .2s ease-in-out;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

p {
  max-width: 80ch;
}

h1 {
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 1rem;
}

h2, h3 {
  font-weight: bold;
}

.stack-sm > * + * {
  margin-top: .5em;
}

.stack-md > * + * {
  margin-top: 1em;
}

.stack-lg > * + * {
  margin-top: 1.5em;
}

.stack-xl > * + * {
  margin-top: 3em;
}

.grid {
  margin-bottom: -3rem;
}

.grid > * {
  margin-bottom: 3rem;
}

.heading--with-divide {
  color: #d70c8c;
  border-top: 1px solid;
  text-transform: uppercase;
}

/* details/summary */

body.supports-details-el details {
  background-color: #e2e6f0;
}

summary {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
  font-weight: bold;
}

body.supports-details-el summary {
  padding: 1rem;
  padding-right: 3.5rem;
}

summary:focus {
  outline-offset: 0;
}

body.supports-details-el summary:after {
  content: '';
  position: absolute;
  top: 1rem;
  right: 1rem;
  display: block;
  height: 1.5em;
  width: 1.5em;
  margin-left: auto;
  background-image: url('./images/plus.svg');
  background-position: right center;
  background-repeat: no-repeat;
  transition: transform 0.2s ease-in-out 0s;
}

body.supports-details-el summary::-webkit-details-marker,
body.supports-details-el summary:focus::-webkit-details-marker {
  background: none;
  color: transparent;
}

body.supports-details-el details[open] summary:after {
  transform: rotate(45deg);
}

/* blockquotes */

blockquote {
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote p {
  display: inline;
  font-style: italic;
}

blockquote p:before,
blockquote p:after {
  color: #d70c8c;
  font-size: 2em;
  line-height: 0.1em;
  vertical-align: -0.4em;
}

blockquote p:before {
  content: open-quote;
  padding-right: 5px;
}

blockquote p:after {
  content: close-quote;
  padding-left: 2px;
}

blockquote footer {
  margin-top: 1em;
}

@media (min-width: 768px) { /* medium devices */
  blockquote p {
    font-size: 1.25rem;
  }
}

/* tables */

th, td {
  padding: .25rem;
  border: 1px solid #004279;
}

thead th {
  color: #fff;
  background-color: #d70c8c;
}

thead tr + tr th,
tbody th {
  color: #d70c8c;
  background-color: #e2e6f0;
}

/* helpers */

.visually-hidden {
  position: absolute !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  padding: 0 !important;
  border: 0 !important;
  height: 1px !important;
  width: 1px !important;
  overflow: hidden !important;
}

.full-width {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.table-overflow {
  overflow-x: auto;
  margin-left: -1rem; /* gutter */
  margin-right: -1rem; /* gutter */
}

@media (min-width: 576px) { /* small devices */
  .table-overflow {
    margin-left: auto;
    margin-right: auto;
  }
}

/* button */

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: .75rem 1rem;
  min-height: 44px;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  transition: background-color .2s;
}

.button:hover {
  text-decoration: none;
}

/* some duplication with *:focus due to specificity conflict with .button */
.button:focus {
  outline: 1px dashed currentColor;
  outline-offset: 5px;
}

.button__primary {
  color: #fff;
  background-color: #d70c8c;
}

.button__primary:hover,
.button__primary:focus {
  background-color: #f323a6;
  outline-color: #d70c8c;
}

.button__secondary {
  color: #004279 !important;
  background-color: #fff;
}

.button__secondary:hover {
  text-decoration: underline;
}

.button_small {
  min-height: auto;
  padding: .5rem 1rem;
  font-size: .75rem;
}

.button__donate {
  height: 100%;
  min-height: 0;
  padding: 0 .75rem;
}

/* layout */

.sidebar {
  background: #fff;
}

.content > * + * {
  margin-top: 40px;
}

.content a {
  color: #d70c8c;
}

.header {
  min-height: 44px;
  color: #fff;
  background-color: #004279;
}

.header *:focus {
  outline-offset: 0;
  outline-color: #fff;
}

.header .button { /* Todo: flatten selector */
  margin-right: -0.25rem; /* remaining gutter after deducting .row from .container */
}

.header--contact-info {
  display: flex;
  align-items: center;
  text-align: right;
  font-size: 0.75rem;
  font-weight: bold;
}

.logo {
  height: 44px;
  max-width: 220px;
  padding: .5rem 0;

  /* IE fix */
  max-height: 96px; /* intrinsic image height */
}

.slogan-social-container {
  display: flex;
  justify-content: space-between;
}

/**
 * mimic flexbox space-evenly layout for IE
 * https://stackoverflow.com/questions/47534216/how-to-make-css-justify-contentspace-evenly-fallback-to-space-between-on-safari
 */
.slogan-social-container:before,
.slogan-social-container:after {
  content: '';
  display: block;
}

.slogan {
  display: flex;
  flex-direction: column;
  color: #c1c9df;
  font-weight: bold;
  font-size: 0.75rem;
  line-height: 1;
  letter-spacing: 1px;
  width: max-content;
}

.link--email {
  color: inherit;
}

@media (min-width: 576px) { /* small devices */
  .header {
    padding-bottom: 20px;
  }

  .header *:focus {
    outline-offset: 5px;
  }

  .header .button { /* Todo: flatten selector */
    margin-right: 0;
  }

  .logo {
    height: auto;
    padding: 0;
  }

  .slogan {
    font-size: 1.4rem;
    line-height: 1.18; /* roughly align bottom of slogan with the bottom of the logo */
    margin-top: -.2em; /* vertically align slogan with logo and social icons */
  }
}
/* ... */

